<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/groups_layout_background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/groups_iv_person"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/group_person_shape"
        app:srcCompat="@drawable/boss" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/groups_tv_personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/groups_tv_username" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/groups_tv_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@drawable/group_tv_shape"
            android:text="@string/groups_btn_pages" />

        <TextView
            android:id="@+id/groups_tv_finishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@drawable/group_tv_shape"
            android:text="@string/groups_btn_finish" />
    </LinearLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/groups_tv_searchHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/groups_tv_search_hint1" />

    <EditText
        android:drawableEnd="@drawable/baseline_saved_search_24"
        android:id="@+id/groups_et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/groups_et_search_hint"
        android:textColorHint="@color/groups_editText_hintColor"
        android:padding="12dp"
        android:background="@drawable/group_et_search_shape"/>

    <TextView
        android:id="@+id/groups_tv_Hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="@color/groups_textView_textColor"
        android:text="@string/groups_tv_search_hint2" />

    <TextView
        android:id="@+id/groups_tv_createGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/groups_tv_createNewGroup"
        android:textColor="@color/groups_textView_createGroup_textColor"
        android:textSize="16sp" />
</LinearLayout>